Include sample data for notebook examples

--- a/examples/notebooks/city-names/DOB Job Application Filings - Anomaly Detection.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Anomaly Detection.ipynb
@@ -18,7 +18,12 @@
     "# Use the 'DOB Job Application Filings - Download' notebook to download the\n",
     "# 'DOB Job Application Filings' dataset for this example.\n",
     "\n",
-    "datafile = './ic3t-wcy2.tsv.gz'\n"
+    "datafile = './ic3t-wcy2.tsv.gz'\n",
+    "\n",
+    "# As an alternative, you can also use the smaller dataset sample that is\n",
+    "# included in the repository.\n",
+    "#\n",
+    "# datafile = './data/ic3t-wcy2.tsv.gz'"
    ]
   },
   {
@@ -42,18 +47,18 @@
     {
      "data": {
       "text/plain": [
-       "NEW YORK      3713\n",
-       "BROOKLYN      1577\n",
-       "QUEENS         542\n",
-       "NY             459\n",
-       "BRONX          433\n",
-       "              ... \n",
-       "ENGELWOOD        1\n",
-       "NEW CANAAN       1\n",
-       "EATONTOWN        1\n",
-       "FLORAL           1\n",
-       "CALVERTON        1\n",
-       "Name: City , Length: 508, dtype: int64"
+       "NEW YORK        3680\n",
+       "BROOKLYN        1594\n",
+       "QUEENS           538\n",
+       "BRONX            470\n",
+       "NY               462\n",
+       "                ... \n",
+       "FAR ROCKAWY        1\n",
+       "OLD BRIDGE         1\n",
+       "MARLTON            1\n",
+       "WILLIAMSBURG       1\n",
+       "NANUET             1\n",
+       "Name: City , Length: 513, dtype: int64"
       ]
      },
      "execution_count": 3,
@@ -114,49 +119,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\t6132\n",
-      "\n",
-      "4\tB'KLYN\n",
-      "\tL.I. CITY\n",
-      "\tL.I.C\n",
-      "\tNB.Y.\n",
-      "\tNEW  YORK\n",
-      "\tN.Y.C.\n",
-      "\tN.Y.\n",
-      "\tBRONX,\n",
-      "\tSI,NY\n",
-      "\tL.I.C.\n",
-      "\tS.I.\n",
-      "\tBRO0KLYN\n",
+      "4\tLIC.\n",
       "\tN Y\n",
-      "\tN.Y\n",
-      "\tQUEENS,\n",
-      "\t521 FIFTH AVENU\n",
-      "\n",
-      "3\tLONG IS. CITY\n",
-      "\tNEW YORK, NY\n",
-      "\tHENAU(SWITZERLA\n",
-      "\tFLUSHING MEADOW\n",
-      "\tNEW YOR\n",
+      "\tB'KLYN\n",
+      "\t_BK\n",
+      "\tQUEEN S\n",
+      "\tL.I.CITY\n",
+      "\tSUITE 2107 NY\n",
+      "\tNEW CANAAN\n",
       "\tHOLLIS HILLS\n",
-      "\tWILLIAMSBURG,\n",
-      "\tS. OZONE PARK\n",
-      "\tFLORAL  PARK\n",
-      "\tNEW YORK,\n",
-      "\tE. JERSEY CITY\n",
-      "\tSO. OZONE PARK\n",
-      "\tNEW HYPDE PK.\n",
-      "\tRICHMOND-HILL\n",
-      "\tBROOKLYN,\n",
-      "\tST HELIER, BVI\n",
-      "\tFLUSHING,QUEENS\n",
+      "\tS.I.\n",
       "\tMIAMI\n",
-      "\tNW YORK\n",
-      "\tNEEWARK,\n",
+      "\tL.I.C\n",
+      "\tFLUSHING MEADOW\n",
+      "\tNEW  YORK\n",
+      "\tS.I.,NY\n",
+      "\tBKLYN.\n",
+      "\tL.I.C.\n",
+      "\tN.Y.\n",
+      "\tSI,NY\n",
+      "\n",
+      "3\tROCKVILLE_CENTR\n",
+      "\tS.OZONE PARK\n",
+      "\tJACKSON HTS.\n",
+      "\tS. OZONE PARK\n",
+      "\tBOONTON\n",
+      "\tMT. KISCO\n",
+      "\tATLANTA\n",
+      "\tNEW YORK,\n",
+      "\tMANHATTAN\n",
+      "\tMINEOLA,\n",
+      "\tNEW YORK  CITY\n",
+      "\tBROOKLYN,\n",
+      "\tFLUS. MEADOWS\n",
+      "\tPHILADELPHIA\n",
+      "\tCINCINNATI\n",
       "\tLONG ISL. CITY\n",
+      "\tNEW  YOURK\n",
+      "\tLONG ISLN. CITY\n",
+      "\tMC LEAN\n",
+      "\tRICHMOND-HILL\n",
       "\tMT.VERNON\n",
-      "\tLI CITY\n",
-      "\tPHILADELPHIA\n"
+      "\tNEW YORK\\\n",
+      "\tSO. OZONE PARK\n",
+      "\tNEW YORK, NY\n"
      ]
     }
    ],
