--- a/examples/notebooks/city-names/DOB Job Application Filings - Brooklyn Spellings.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Brooklyn Spellings.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Potential Misspellings of Brooklyn\n",
     "\n",
-    "This is an example notebook that used the SOUNDEX function to identify potential misspellings of the city name BROOKLYN in the NYC DOB Job Application Filings dataset."
+    "This is an example notebook that uses the SOUNDEX function to identify potential misspellings of the city name BROOKLYN in the NYC DOB Job Application Filings dataset."
    ]
   },
   {
@@ -18,7 +18,12 @@
     "# Use the 'DOB Job Application Filings - Download' notebook to download the\n",
     "# 'DOB Job Application Filings' dataset for this example.\n",
     "\n",
-    "datafile = './ic3t-wcy2.tsv.gz'\n"
+    "datafile = './ic3t-wcy2.tsv.gz'\n",
+    "\n",
+    "# As an alternative, you can also use the smaller dataset sample that is\n",
+    "# included in the repository.\n",
+    "#\n",
+    "# datafile = './data/ic3t-wcy2.tsv.gz'"
    ]
   },
   {
@@ -68,8 +73,8 @@
       "1.\t1059\tBRKLYN\n",
       "2.\t749\tBROOKYLN\n",
       "3.\t437\tBROOKLY\n",
-      "4.\t287\tBROOKLYN,\n",
-      "5.\t230\tBROKLYN\n",
+      "4.\t288\tBROOKLYN,\n",
+      "5.\t231\tBROKLYN\n",
       "6.\t162\tBRROKLYN\n",
       "7.\t162\tBROOKLN\n",
       "8.\t107\tBROOKLYLN\n",
