--- a/examples/notebooks/parking-violations/Parking Violations - Functional Dependencies.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Functional Dependencies.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functional Dependency Violations\n",
+    "\n",
+    "Example showing how to detect functional dependency violations. Uses the **NYC Parking Violations Issued - Fiscal Year 2014** dataset to identify violations of the functional dependency `Meter Number -> Registration State, Street`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,15 +40,20 @@
     "\n",
     "from openclean.data.source.socrata import Socrata\n",
     "\n",
+    "datafile = './jt7v-77mi.tsv.gz'\n",
     "\n",
-    "outfile = './jt7v-77mi.tsv.gz'\n",
-    "\n",
-    "with gzip.open(outfile, 'wb') as f:\n",
+    "with gzip.open(datafile, 'wb') as f:\n",
     "    ds = Socrata().dataset('jt7v-77mi')\n",
     "    print('Downloading ...\\n')\n",
     "    print(ds.name + '\\n')\n",
     "    print(ds.description)\n",
-    "    ds.write(f)"
+    "    ds.write(f)\n",
+    "\n",
+    "\n",
+    "# As an alternative, you can also use the smaller dataset sample that is\n",
+    "# included in the repository.\n",
+    "#\n",
+    "# datafile = './data/jt7v-77mi.tsv.gz'"
    ]
   },
   {
@@ -108,7 +122,7 @@
     "\n",
     "from openclean.pipeline import stream\n",
     "\n",
-    "df = stream(outfile)\n",
+    "df = stream(datafile)\n",
     "\n",
     "\n",
     "print('Schema\\n------')\n",
@@ -211,7 +225,8 @@
     }
    ],
    "source": [
-    "# Get the first 100 rows where the parking meter number is not undefined.\n",
+    "# Get the first 100 rows. Ignore rows where the meter number is undefined (i.e., either\n",
+    "# an empty string or '-').\n",
     "\n",
     "from openclean.function.eval.domain import IsNotIn\n",
     "\n",
@@ -229,9 +244,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Find violations of the functional dependency Meter Number -> Registration State, Street.\n",
+    "\n",
     "from openclean.operator.map.violations import fd_violations\n",
     "\n",
-    "groups = fd_violations(df, lhs='Meter Number', rhs='Street')"
+    "groups = fd_violations(df, lhs='Meter Number', rhs=['Registration State', 'Street'])"
    ]
   },
   {
@@ -258,6 +275,9 @@
     }
    ],
    "source": [
+    "# List meter numbers that have violations and the number of\n",
+    "# violating values.\n",
+    "\n",
     "for key in groups:\n",
     "    print('{} {}'.format(key, groups.get(key).shape[0]))"
    ]
@@ -314,6 +334,8 @@
     }
    ],
    "source": [
+    "# Show street names that cause violations of the functional dependency.\n",
+    "\n",
     "from openclean.operator.collector.count import distinct\n",
     "\n",
     "print('Meter Number | Street (Count)')\n",
