Refactor key generator. Add US street name key generator

--- a/dev/notebooks/Cluster Performance.ipynb
+++ b/dev/notebooks/Cluster Performance.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openclean.function.token.key import Fingerprint\n",
+    "from openclean.function.value.key.fingerprint import Fingerprint\n",
     "import time"
    ]
   },
