--- a/examples/notebooks/parking-violations/Parking Violations - Cluster Streets.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Cluster Streets.ipynb
@@ -687,6 +687,10 @@
     "    unique=False\n",
     ")\n",
     "\n",
+    "# This specialized tokenizer is now also included in openclean.\n",
+    "#from openclean.function.value.key.geo import USStreetNameKey\n",
+    "#tokenizer = USStreetNameKey()\n",
+    "\n",
     "clusters = key_collision(values=streets, func=tokenizer, minsize=minsize, threads=4)\n",
     "\n",
     "print('{} clusters of size {} or greater'.format(len(clusters), minsize))"
