--- a/examples/notebooks/Masterdata.ipynb
+++ b/examples/notebooks/Masterdata.ipynb
@@ -4,54 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Masterdata\n",
+    "# Masterdata from Reference Datasets\n",
     "\n",
-    "**openclean** provides easy access to several different datasets that are available online for download. Below are a few examples."
+    "**openclean** integrates the [refdata package](https://github.com/VIDA-NYU/reference-data-repository) to provides easy access to several different reference datasets that are available online for download. Reference datasets are for example a great source for lookup tables and mappings that are used in data cleaning for outlier detection and data standardization."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup the environment for this demo. All files will be\n",
+    "# stored in a subfolder data.\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "from openclean.config import ENV_MASTERDATA_DIR\n",
+    "from refdata.config import ENV_BASEDIR\n",
+    "\n",
+    "os.environ[ENV_MASTERDATA_DIR] = './data/archives'\n",
+    "os.environ[ENV_BASEDIR] = './data/refdata'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the amasterdata and reference data modules.\n",
+    "\n",
+    "import openclean.data.archive as masterdata\n",
+    "import openclean.data.refdata as refdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encyclopaedia Britannica (britannica)\n",
-      "\tUnited States Cities (us_cities)\n",
-      "restcountries.eu (restcountries)\n",
-      "\tCountries of the World (countries)\n",
-      "Socrata Open Data API (socrata)\n",
-      "\tPermitting Dashboard Full Dataset (mcm3-xbid)\n",
-      "\tTime Dataset (pt25-zdgd)\n",
-      "\tTest Socrata Push 2 (saxa-vwk9)\n",
-      "\ttest 1 (k8qb-prdi)\n",
-      "\tTest Socrata Push (i6cn-zc28)\n",
-      "\tProject Full Dataset - Copy 1 (dx3v-2pvx)\n",
-      "\tAccountability Scorecard Time to Complete Data (v38y-irda)\n",
-      "\tProject Location Testing 1 (5xty-5v4b)\n",
-      "\tCrimes (mjmi-qtn7)\n",
-      "\tLicenses (m8b2-td2c)\n"
+      "Cities in the U.S. (encyclopaedia_britannica:us_cities)\n",
+      "REST Countries (restcountries.eu)\n",
+      "C1 Street Suffix Abbreviations (usps:street_abbrev)\n",
+      "C2 Secondary Unit Designators (usps:secondary_unit_designators)\n"
      ]
     }
    ],
    "source": [
-    "# All datasets can be downloaded and accessed via a data repository.\n",
-    "# Print the repository names and some example datasets.\n",
+    "# Print a listing for all dataset in the default\n",
+    "# reference data repository.\n",
     "\n",
-    "from openclean.data.source.registry import repositories\n",
-    "\n",
-    "for repo in repositories():\n",
-    "    print('{} ({})'.format(repo.name, repo.identifier))\n",
-    "    # The list of datasets for the Socrata Open Data API is very long.\n",
-    "    # here we only print information about the first ten datasets.\n",
-    "    count = 0;\n",
-    "    for ds in repo.catalog():\n",
-    "        print('\\t{} ({})'.format(ds.name, ds.identifier))\n",
-    "        count += 1\n",
-    "        if count == 10:\n",
-    "            break"
+    "for dataset in refdata.repository():\n",
+    "    print('{} ({})'.format(dataset.name, dataset.identifier))"
    ]
   },
   {
@@ -65,24 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download the countries dataset. By default, the downloaded data is stored\n",
-    "# in the $HOME/.openclean/masterdata folder. Set the environment variable\n",
-    "# 'OPENCLEAN_MASTERDATA_DIR' to change the default behaviour.\n",
+    "# Download the countries dataset.\n",
     "\n",
-    "import os\n",
-    "\n",
-    "from openclean.config import ENV_MASTERDATA_DIR\n",
-    "\n",
-    "os.environ[ENV_MASTERDATA_DIR] = './data'"
+    "refdata.download('restcountries.eu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -98,36 +101,19 @@
       "3         Algeria         DZ        DZA    Algiers   Africa  Northern Africa\n",
       "4  American Samoa         AS        ASM  Pago Pago  Oceania        Polynesia\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Snapshot (version=0 description='' at=2021-01-11 16:07:13.119980-05:00)>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Download the current listing of country names in the world.\n",
+    "# Print the first rows in the countries dataset.\n",
     "\n",
-    "from openclean.data.source.restcountries import RestcountriesRepository, COUNTRIES\n",
+    "countries = refdata.open('restcountries.eu').data_frame()\n",
     "\n",
-    "import openclean.data.masterdata as masterdata\n",
-    "\n",
-    "countries = RestcountriesRepository().dataset(COUNTRIES).load()\n",
-    "\n",
-    "print(countries.head())\n",
-    "\n",
-    "archive = masterdata.create('restcountries', primary_key=['alpha3Code'], replace=True)\n",
-    "archive.commit(countries)"
+    "print(countries.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,12 +167,14 @@
        "243  Americas  South America  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Print entry for 'Venezuela'\n",
+    "\n",
     "countries.loc[countries['name'] == 'Venezuela (Bolivarian Republic of)']"
    ]
   },
@@ -196,12 +184,35 @@
    "source": [
     "### Modified Mastedata Copies\n",
     "\n",
-    "The user has the option to modify the downloaded data and store the updated dataset version in the local repository."
+    "The user has the option to modify the downloaded data and store the updated dataset version in the local masterdata repository."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Snapshot (version=0 description='' at=2021-01-27 12:47:38.409614-05:00)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a local masterdata archive for the countries dataset.\n",
+    "\n",
+    "archive = masterdata.create('restcountries', primary_key=['alpha3Code'], replace=True)\n",
+    "archive.commit(countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,22 +263,23 @@
        "243  Venezuela         VE        VEN  Caracas  Americas  South America"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Rename 'Venezuela (Bolivarian Republic of)' to 'Venezuela'.\n",
+    "\n",
     "from openclean.operator.transform.update import update\n",
     "\n",
-    "# Rename 'Venezuela (Bolivarian Republic of)' to 'Venezuela'\n",
     "countries = update(countries, 'name', {'Venezuela (Bolivarian Republic of)': 'Venezuela'})\n",
     "countries.loc[countries['name'] == 'Venezuela']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +370,7 @@
        "4  American Samoa         AS        ASM  Pago Pago  Oceania        Polynesia"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,28 +381,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Snapshot (version=1 description='' at=2021-01-11 16:07:13.335825-05:00)>"
+       "<Snapshot (version=1 description='' at=2021-01-27 12:47:38.582334-05:00)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Store the modified dataset as a new snapshot in the masterdata\n",
+    "# archive.\n",
+    "\n",
     "archive = masterdata.get('restcountries')\n",
     "archive.commit(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +456,7 @@
        "239  Venezuela         VE        VEN  Caracas  Americas  South America"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,15 +468,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Snapshot (version=0 description='' at=2021-01-11 16:07:13.119980-05:00)>\n",
-      "<Snapshot (version=1 description='' at=2021-01-11 16:07:13.335825-05:00)>\n"
+      "<Snapshot (version=0 description='' at=2021-01-27 12:47:38.409614-05:00)>\n",
+      "<Snapshot (version=1 description='' at=2021-01-27 12:47:38.582334-05:00)>\n"
      ]
     }
    ],
@@ -473,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -564,27 +579,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Birmingham</td>\n",
+       "      <td>Demopolis</td>\n",
        "      <td>Alabama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bessemer</td>\n",
+       "      <td>Sylacauga</td>\n",
        "      <td>Alabama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Scottsboro</td>\n",
+       "      <td>Troy</td>\n",
        "      <td>Alabama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Florence</td>\n",
+       "      <td>Dothan</td>\n",
        "      <td>Alabama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Athens</td>\n",
+       "      <td>Prichard</td>\n",
        "      <td>Alabama</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -592,26 +607,46 @@
        "</div>"
       ],
       "text/plain": [
-       "         city    state\n",
-       "0  Birmingham  Alabama\n",
-       "1    Bessemer  Alabama\n",
-       "2  Scottsboro  Alabama\n",
-       "3    Florence  Alabama\n",
-       "4      Athens  Alabama"
+       "        city    state\n",
+       "0  Demopolis  Alabama\n",
+       "1  Sylacauga  Alabama\n",
+       "2       Troy  Alabama\n",
+       "3     Dothan  Alabama\n",
+       "4   Prichard  Alabama"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Download dataset with US city names.\n",
+    "# Get dataset with US city names. Used the auto_download\n",
+    "# option that will fetch the dataset if it has not been\n",
+    "# downloaded yet.\n",
     "\n",
-    "from openclean.data.source.britannica import EncyclopaediaBritannica, US_CITIES\n",
-    "\n",
-    "us_cities = EncyclopaediaBritannica().dataset(US_CITIES).load()\n",
+    "us_cities = refdata.open(key='encyclopaedia_britannica:us_cities', auto_download=True).data_frame()\n",
     "us_cities.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the created data folder.\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "shutil.rmtree('./data')"
    ]
   }
  ],
