--- a/examples/notebooks/parking-violations/Parking Violations - Key Collision Clustering for Street Names.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Key Collision Clustering for Street Names.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "datafile = './jt7v-77mi.tsv.gz'\n",
     "\n",
-    "#with gzip.open(datafile, 'wb') as f:\n",
-    "#    ds = Socrata().dataset('jt7v-77mi')\n",
-    "#    ds.write(f)\n",
+    "with gzip.open(datafile, 'wb') as f:\n",
+    "    ds = Socrata().dataset('jt7v-77mi')\n",
+    "    ds.write(f)\n",
     "\n",
     "\n",
     "# As an alternative, you can also use the smaller dataset sample that is\n",
