--- a/examples/notebooks/city-names/DOB Job Application Filings - Download.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Download.ipynb
@@ -1,12 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download DOB Job Application Filings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
-    "# Download the full 'DOB Job Application Fiings' dataset.\n",
+    "# Download the full 'DOB Job Application Filings' dataset.\n",
     "\n",
     "import gzip\n",
     "\n",
@@ -22,7 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,7 +142,7 @@
       "  'GIS_NTA_NAME'\n",
       "  'GIS_BIN'\n",
       "\n",
-      "1761502 rows.\n"
+      "1762407 rows.\n"
      ]
     }
    ],
@@ -147,13 +162,20 @@
     "    \n",
     "print('\\n{} rows.'.format(df.count()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -165,7 +187,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
