Base openclean.cluster.base.Cluster of collections.Counter

--- a/examples/notebooks/parking-violations/Parking Violations - Key Collision Clustering for Street Names.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Key Collision Clustering for Street Names.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "def print_cluster(cnumber, cluster):\n",
     "    print('Cluster {} (of size {})\\n'.format(cnumber, len(cluster)))\n",
-    "    for val, count in cluster:\n",
+    "    for val, count in cluster.items():\n",
     "        print('{} ({})'.format(val, count))\n",
     "    print('\\nSuggested value: {}\\n\\n'.format(cluster.suggestion()))\n",
     "    \n",
@@ -1361,7 +1361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
