Add kNN example and kNN + key collision clusterer

--- a/examples/notebooks/parking-violations/Parking Violations - Key Collision Clustering for Street Names.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Key Collision Clustering for Street Names.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "# Download the full 'DOB Job Application Fiings' dataset.\n",
+    "# Note that this is a file of ~ GB!\n",
     "\n",
     "import gzip\n",
     "\n",
