--- a/examples/notebooks/engine/Openclean Engine - Datastore.ipynb
+++ b/examples/notebooks/engine/Openclean Engine - Datastore.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "[195 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,12 +240,12 @@
     "from openclean.function.eval.null import IsEmpty\n",
     "from openclean.operator.transform.filter import delete\n",
     "\n",
-    "df = delete(df, IsEmpty('Bidders Name'))"
+    "df = db.commit(name='bidders', df=delete(df, IsEmpty('Bidders Name')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "[194 rows x 6 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,8 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "[LogEntry(descriptor={'optype': 'load', 'columns': None}, identifier='d3ac303ed3334badac1a8b1de0d1e645', action=None, version=None),\n",
+       " LogEntry(descriptor={'optype': 'commit', 'columns': None}, identifier='60878bac40464cb1b7f879a9d9230fde', action=None, version=None)]"
       ]
      },
      "execution_count": 6,
@@ -451,25 +452,14 @@
     }
    ],
    "source": [
-    "add_n(3, n=4)"
+    "db.dataset('bidders').log()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_n(3)"
    ]
@@ -491,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
