notebook titles updated

--- a/examples/notebooks/Masterdata.ipynb
+++ b/examples/notebooks/Masterdata.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Masterdata from Reference Datasets\n",
+    "# Downloading master data from Reference Data Repository\n",
     "\n",
     "**openclean** integrates the [refdata package](https://github.com/VIDA-NYU/reference-data-repository) to provides easy access to several different reference datasets that are available online for download. Reference datasets are for example a great source for lookup tables and mappings that are used in data cleaning for outlier detection and data standardization."
    ]
@@ -667,6 +667,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
