--- a/examples/notebooks/city-names/DOB Job Application Filings - Brooklyn Spellings.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Brooklyn Spellings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Potential Misspellings of Brooklyn\n",
+    "# Misspellings of Brooklyn\n",
     "\n",
     "This is an example notebook that uses the SOUNDEX function to identify potential misspellings of the city name BROOKLYN in the NYC DOB Job Application Filings dataset."
    ]
@@ -272,6 +272,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
