--- a/examples/notebooks/city-names/DOB Job Application Filings - Download.ipynb
+++ b/examples/notebooks/city-names/DOB Job Application Filings - Download.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download DOB Job Application Filings"
+    "# Downloading DOB Job Application Filings from Socrata"
    ]
   },
   {
@@ -192,10 +192,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
