--- a/examples/notebooks/Country Names.ipynb
+++ b/examples/notebooks/Country Names.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Country Names Example\n",
+    "# Misspellings in Country Names\n",
     "\n",
     "This notebook contains an example that uses the list of country names provided by the restcountries project to identify potential misspelled names in the 'ITU ICT Development Index (IDI)'."
    ]
@@ -471,6 +471,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
