--- a/examples/notebooks/nyc-restaurant-inspections/NYC Restaurant Inspections - Cleaning.ipynb
+++ b/examples/notebooks/nyc-restaurant-inspections/NYC Restaurant Inspections - Cleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DOHMH New York City Restaurant Inspection Results\n",
+    "# Wrangling - DOHMH New York City Restaurant Inspection Results\n",
     "\n",
     "## Data Cleaning\n",
     "\n",
@@ -1254,6 +1254,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
