--- a/examples/notebooks/nyc-restaurant-inspections/NYC Restaurant Inspections - kNN Clusters for Business Name.ipynb
+++ b/examples/notebooks/nyc-restaurant-inspections/NYC Restaurant Inspections - kNN Clusters for Business Name.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DOHMH New York City Restaurant Inspection Results\n",
+    "# kNN Clustering - DOHMH New York City Restaurant Inspection Results\n",
     "\n",
     "Find groups of different business names that might be alternative representations of the same venue. This is an example for the **kNN clustering** supported by **openclean**."
    ]
@@ -476,6 +476,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
