--- a/examples/notebooks/Masterdata.ipynb
+++ b/examples/notebooks/Masterdata.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "# Print the first rows in the countries dataset.\n",
     "\n",
-    "countries = refdata.open('restcountries.eu').data_frame()\n",
+    "countries = refdata.load('restcountries.eu').df()\n",
     "\n",
     "print(countries.head())"
    ]
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<Snapshot (version=0 description='' at=2021-01-27 12:47:38.409614-05:00)>"
+       "<Snapshot (version=0 description='' at=2021-02-16 17:28:18.211195-05:00)>"
       ]
      },
      "execution_count": 7,
@@ -387,7 +387,7 @@
     {
      "data": {
       "text/plain": [
-       "<Snapshot (version=1 description='' at=2021-01-27 12:47:38.582334-05:00)>"
+       "<Snapshot (version=1 description='' at=2021-02-16 17:28:18.359359-05:00)>"
       ]
      },
      "execution_count": 10,
@@ -475,8 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Snapshot (version=0 description='' at=2021-01-27 12:47:38.409614-05:00)>\n",
-      "<Snapshot (version=1 description='' at=2021-01-27 12:47:38.582334-05:00)>\n"
+      "<Snapshot (version=0 description='' at=2021-02-16 17:28:18.211195-05:00)>\n",
+      "<Snapshot (version=1 description='' at=2021-02-16 17:28:18.359359-05:00)>\n"
      ]
     }
    ],
@@ -625,7 +625,7 @@
     "# option that will fetch the dataset if it has not been\n",
     "# downloaded yet.\n",
     "\n",
-    "us_cities = refdata.open(key='encyclopaedia_britannica:us_cities', auto_download=True).data_frame()\n",
+    "us_cities = refdata.load(key='encyclopaedia_britannica:us_cities', auto_download=True).df()\n",
     "us_cities.head()"
    ]
   },
