--- a/examples/notebooks/parking-violations/Parking Violations - Token Signature Outliers for Street Names.ipynb
+++ b/examples/notebooks/parking-violations/Parking Violations - Token Signature Outliers for Street Names.ipynb
@@ -105,7 +105,7 @@
     "from openclean.profiling.pattern.token_signature import token_signature\n",
     "\n",
     "# Convert all values to liwer case.\n",
-    "street_abbrev = refdata.open('usps:street_abbrev').data_frame()\n",
+    "street_abbrev = refdata.load('usps:street_abbrev').df()\n",
     "street_abbrev = apply(street_abbrev, columns=street_abbrev.columns, func=str.lower)\n",
     "# Create one signature entry for each unique primary suffix.\n",
     "groups = groupby(street_abbrev, columns='primary_suffix')\n",
