Log identifiers replaced with version no

--- a/examples/notebooks/engine/Openclean Engine - Datastore.ipynb
+++ b/examples/notebooks/engine/Openclean Engine - Datastore.ipynb
@@ -1266,9 +1266,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d863328a3da645f5b304e51414e8897d {'optype': 'sample', 'columns': None, 'arguments': [{'name': 'n', 'value': 10}, {'name': 'randomState', 'value': 43}]}\n",
-      "a0440be6e67641639342cdbdf4ea7e78 {'optype': 'update', 'columns': ['Bidders Name'], 'name': 'capitalize'}\n",
-      "3c9336090c444c86a4a28b51855456e3 {'optype': 'update', 'columns': ['City'], 'name': 'zigzag'}\n"
+      "0 {'optype': 'sample', 'columns': None, 'arguments': [{'name': 'n', 'value': 10}, {'name': 'randomState', 'value': 43}]}\n",
+      "1 {'optype': 'update', 'columns': ['Bidders Name'], 'name': 'capitalize'}\n",
+      "2 {'optype': 'update', 'columns': ['City'], 'name': 'zigzag'}\n"
      ]
     }
    ],
@@ -1280,8 +1280,8 @@
     "\n",
     "snapshots = list()\n",
     "for op in db.dataset('bidders').log():\n",
-    "    print('{} {}'.format(op.identifier, op.descriptor))\n",
-    "    snapshots.append(op.identifier)"
+    "    print('{} {}'.format(op.version, op.descriptor))\n",
+    "    snapshots.append(op.version)"
    ]
   },
   {
@@ -1653,8 +1653,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d863328a3da645f5b304e51414e8897d {'optype': 'sample', 'columns': None, 'arguments': [{'name': 'n', 'value': 10}, {'name': 'randomState', 'value': 43}]}\n",
-      "a0440be6e67641639342cdbdf4ea7e78 {'optype': 'update', 'columns': ['Bidders Name'], 'name': 'capitalize'}\n"
+      "0 {'optype': 'sample', 'columns': None, 'arguments': [{'name': 'n', 'value': 10}, {'name': 'randomState', 'value': 43}]}\n",
+      "1 {'optype': 'update', 'columns': ['Bidders Name'], 'name': 'capitalize'}\n"
      ]
     }
    ],
@@ -1662,8 +1662,8 @@
     "# Show remaining operations in the current dataset log.\n",
     "\n",
     "for op in db.dataset('bidders').log():\n",
-    "    print('{} {}'.format(op.identifier, op.descriptor))\n",
-    "    snapshots.append(op.identifier)"
+    "    print('{} {}'.format(op.version, op.descriptor))\n",
+    "    snapshots.append(op.version)"
    ]
   },
   {
@@ -1868,10 +1868,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'optype': 'load', 'columns': None}\n",
-      "{'optype': 'commit', 'columns': None}\n",
-      "{'optype': 'update', 'columns': ['Bidders Name'], 'name': 'lower'}\n",
-      "{'optype': 'update', 'columns': ['Bidders Name'], 'name': 'capitalize'}\n"
+      "0 {'optype': 'load', 'columns': None}\n",
+      "1 {'optype': 'commit', 'columns': None}\n",
+      "2 {'optype': 'update', 'columns': ['Bidders Name'], 'name': 'lower'}\n",
+      "3 {'optype': 'update', 'columns': ['Bidders Name'], 'name': 'capitalize'}\n"
      ]
     }
    ],
@@ -1879,15 +1879,15 @@
     "# Show operations in the resulting dataset log.\n",
     "\n",
     "for op in db.dataset('bidders').log():\n",
-    "    print(op.descriptor)"
+    "    print(op.version, op.descriptor)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PyCharm (openclean-core)",
    "language": "python",
-   "name": "python3"
+   "name": "pycharm-c6d12a8"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1899,7 +1899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
