Add option for rollback of full (persistent) datasets

--- a/examples/notebooks/engine/Openclean Engine - Datastore.ipynb
+++ b/examples/notebooks/engine/Openclean Engine - Datastore.ipynb
@@ -1881,13 +1881,214 @@
     "for op in db.dataset('bidders').log():\n",
     "    print(op.version, op.descriptor)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rollback Changes in Persistent Archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Title or Project</th>\n",
+       "      <th>Bidders Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Location 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>07/26/2017</td>\n",
+       "      <td>HE - NARCAN 4MG 7.25</td>\n",
+       "      <td>adapt pharma</td>\n",
+       "      <td>RADNOR</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>RADNOR, PA\\n(40.038043, -75.344449)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>09/19/2017</td>\n",
+       "      <td>FTA Cards for DPS</td>\n",
+       "      <td>ge healthcare</td>\n",
+       "      <td>Marborough</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>Marborough, MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>09/26/2017</td>\n",
+       "      <td>02140-785 - Rescue Equipment</td>\n",
+       "      <td>reynolds &amp; son</td>\n",
+       "      <td>Barre</td>\n",
+       "      <td>VT</td>\n",
+       "      <td>Barre, VT\\n(44.200603, -72.505569)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>09/20/2017</td>\n",
+       "      <td>BGS - 170078 Trush Parking Lot Paving Repairs ...</td>\n",
+       "      <td>s t paving , inc</td>\n",
+       "      <td>Waterbury</td>\n",
+       "      <td>VT</td>\n",
+       "      <td>Waterbury, VT\\n(44.334602, -72.753189)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>08/25/2017</td>\n",
+       "      <td>AGR - Laboratory Epuipment</td>\n",
+       "      <td>daigger scientific</td>\n",
+       "      <td>Vernon Hills</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Vernon Hills, IL\\n(42.238635, -87.959562)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>08/09/2017</td>\n",
+       "      <td>BGS - AHS Janitorial Services  - St Albans, VT</td>\n",
+       "      <td>loso's professional j.s.</td>\n",
+       "      <td>South Burlington</td>\n",
+       "      <td>VT</td>\n",
+       "      <td>South Burlington, VT\\n(44.468286, -73.171594)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>09/06/2017</td>\n",
+       "      <td>BGS - A &amp; E Window Restoration - 133 State St</td>\n",
+       "      <td>vt architects collaborative</td>\n",
+       "      <td>Randolph</td>\n",
+       "      <td>VT</td>\n",
+       "      <td>Randolph, VT\\n(43.925266, -72.665754)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>09/07/2017</td>\n",
+       "      <td>VDH - Car Seats</td>\n",
+       "      <td>even flo</td>\n",
+       "      <td>Cullman</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Cullman, AL\\n(34.173753, -86.843115)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>07/24/2017</td>\n",
+       "      <td>RFP DMV Registration Renewal Forms</td>\n",
+       "      <td>rr donnelley</td>\n",
+       "      <td>Derry</td>\n",
+       "      <td>NH</td>\n",
+       "      <td>Derry, NH\\n(42.881978, -71.324171)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>08/03/2017</td>\n",
+       "      <td>02140-331 - Enclosed snowmobile trailers</td>\n",
+       "      <td>perfection motorsports</td>\n",
+       "      <td>Richmond</td>\n",
+       "      <td>VT</td>\n",
+       "      <td>Richmond, VT\\n(44.405247, -72.992905)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>194 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date                                   Title or Project  \\\n",
+       "143  07/26/2017                               HE - NARCAN 4MG 7.25   \n",
+       "138  09/19/2017                                  FTA Cards for DPS   \n",
+       "24   09/26/2017                       02140-785 - Rescue Equipment   \n",
+       "59   09/20/2017  BGS - 170078 Trush Parking Lot Paving Repairs ...   \n",
+       "43   08/25/2017                         AGR - Laboratory Epuipment   \n",
+       "..          ...                                                ...   \n",
+       "64   08/09/2017     BGS - AHS Janitorial Services  - St Albans, VT   \n",
+       "62   09/06/2017      BGS - A & E Window Restoration - 133 State St   \n",
+       "179  09/07/2017                                    VDH - Car Seats   \n",
+       "159  07/24/2017                 RFP DMV Registration Renewal Forms   \n",
+       "3    08/03/2017           02140-331 - Enclosed snowmobile trailers   \n",
+       "\n",
+       "                    Bidders Name              City State  \\\n",
+       "143                 adapt pharma            RADNOR    PA   \n",
+       "138                ge healthcare        Marborough    MA   \n",
+       "24                reynolds & son             Barre    VT   \n",
+       "59              s t paving , inc         Waterbury    VT   \n",
+       "43            daigger scientific      Vernon Hills    IL   \n",
+       "..                           ...               ...   ...   \n",
+       "64      loso's professional j.s.  South Burlington    VT   \n",
+       "62   vt architects collaborative          Randolph    VT   \n",
+       "179                     even flo           Cullman    AL   \n",
+       "159                 rr donnelley             Derry    NH   \n",
+       "3         perfection motorsports          Richmond    VT   \n",
+       "\n",
+       "                                        Location 1  \n",
+       "143            RADNOR, PA\\n(40.038043, -75.344449)  \n",
+       "138                                 Marborough, MA  \n",
+       "24              Barre, VT\\n(44.200603, -72.505569)  \n",
+       "59          Waterbury, VT\\n(44.334602, -72.753189)  \n",
+       "43       Vernon Hills, IL\\n(42.238635, -87.959562)  \n",
+       "..                                             ...  \n",
+       "64   South Burlington, VT\\n(44.468286, -73.171594)  \n",
+       "62           Randolph, VT\\n(43.925266, -72.665754)  \n",
+       "179           Cullman, AL\\n(34.173753, -86.843115)  \n",
+       "159             Derry, NH\\n(42.881978, -71.324171)  \n",
+       "3            Richmond, VT\\n(44.405247, -72.992905)  \n",
+       "\n",
+       "[194 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rollback changes in the persistent archive to version 2.\n",
+    "\n",
+    "df = db.rollback('bidders', version=2)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (openclean-core)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-c6d12a8"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1899,7 +2100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
